--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,24 @@
-<p>layout works!</p>
+<ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"
+(onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+  <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
+    Optional custom content that replaces the the entire default content.
+    <button type="button" (click)="openFileSelector()">Browse Files</button>
+  </ng-template>
+</ngx-file-drop>
+
+<hr/>
+
+<div class="table-responsive">
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of files; let i = index">
+        <td>{{item.relativePath}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
